--- a/public/css/style.css
+++ b/public/css/style.css
@@ -693,6 +693,14 @@ video {
   right: 0px;
 }
 
+.-top-\[8px\] {
+  top: -8px;
+}
+
+.-left-\[12px\] {
+  left: -12px;
+}
+
 .-bottom-\[72px\] {
   bottom: -72px;
 }
@@ -735,30 +743,6 @@ video {
 
 .bottom-4 {
   bottom: 1rem;
-}
-
-.-left-2\/4 {
-  left: -50%;
-}
-
-.-left-\[12px\] {
-  left: -12px;
-}
-
-.-top-\[10px\] {
-  top: -10px;
-}
-
-.-top-\[6px\] {
-  top: -6px;
-}
-
-.-top-\[7px\] {
-  top: -7px;
-}
-
-.-top-\[8px\] {
-  top: -8px;
 }
 
 .mx-auto {
@@ -855,10 +839,6 @@ video {
   margin-bottom: 0px;
 }
 
-.mr-4 {
-  margin-right: 1rem;
-}
-
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -869,6 +849,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mb-2\.5 {
@@ -1288,6 +1272,46 @@ video {
           animation: rotateIn 1.2s ease-in forwards;
 }
 
+@-webkit-keyframes wiggle {
+  0%, 100% {
+    transform: rotate(-3deg) scale(0.9);
+  }
+
+  50% {
+    transform: rotate(3deg) scale(1);
+  }
+}
+
+@keyframes wiggle {
+  0%, 100% {
+    transform: rotate(-3deg) scale(0.9);
+  }
+
+  50% {
+    transform: rotate(3deg) scale(1);
+  }
+}
+
+.animate-\[wiggle_10s_ease-in-out_infinite\] {
+  -webkit-animation: wiggle 10s ease-in-out infinite;
+          animation: wiggle 10s ease-in-out infinite;
+}
+
+@keyframes wiggle {
+  0%, 100% {
+    transform: rotate(-3deg) scale(0.9);
+  }
+
+  50% {
+    transform: rotate(3deg) scale(1);
+  }
+}
+
+.animate-\[wiggle_6s_ease-in-out_infinite\] {
+  -webkit-animation: wiggle 6s ease-in-out infinite;
+          animation: wiggle 6s ease-in-out infinite;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1377,10 +1401,6 @@ video {
   border-width: 2px;
 }
 
-.border-r-4 {
-  border-right-width: 4px;
-}
-
 .border-r-2 {
   border-right-width: 2px;
 }
@@ -1466,6 +1486,10 @@ video {
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-fixed {
+  background-attachment: fixed;
 }
 
 .bg-center {
@@ -1569,6 +1593,14 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -1585,20 +1617,8 @@ video {
   padding-top: 2.5rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-6 {
-  padding-left: 1.5rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
+.pb-32 {
+  padding-bottom: 8rem;
 }
 
 .text-center {
@@ -1661,13 +1681,13 @@ video {
   line-height: 2.25rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1950,10 +1970,6 @@ video {
     margin-left: 0px;
   }
 
-  .sm\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
   .sm\:mb-4 {
     margin-bottom: 1rem;
   }
@@ -2173,20 +2189,20 @@ video {
     padding-bottom: 2.5rem;
   }
 
-  .sm\:pb-10 {
-    padding-bottom: 2.5rem;
-  }
-
-  .sm\:pt-32 {
-    padding-top: 8rem;
-  }
-
   .sm\:pr-10 {
     padding-right: 2.5rem;
   }
 
   .sm\:pl-10 {
     padding-left: 2.5rem;
+  }
+
+  .sm\:pb-10 {
+    padding-bottom: 2.5rem;
+  }
+
+  .sm\:pt-32 {
+    padding-top: 8rem;
   }
 
   .sm\:text-right {
